# sqlx

./: Cargo.toml  README.md
.github/workflows/: build.yaml
migrations/: 0001_users_create_table.sql  0003_session_create_table.sql
src/: main.rs
src/commands/: help.rs  login.rs  logout.rs  mod.rs  register.rs
src/util/: config_dir.rs  db_helpers.rs  helpers.rs  me.rs  mod.rs
