[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
colored = "3.0.0"
asky = "0.1.1"
bcrypt = "0.10"
reqwest = { version = "0.12.12", features = ["json"] }
directories = "6.0.0"
uuid = { version = "1.12.1", features = ["v7"] }
